fix margins on mobile

--- a/src/sass/common/_textbox.scss
+++ b/src/sass/common/_textbox.scss
@@ -59,7 +59,6 @@
   .img-text-wrapper {
     flex-direction: column;
     margin: 0 0 32px 0;
-    width: calc(100% - 32px);
     .text-box {
       &-slot {
         p {
